--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "pm2": "^6.0.9"
   }
 }
